2009-02-25  John W. Eaton  <jwe@octave.org>

	* defaults.h.in (OCTAVE_DOC_CACHE_FILE): New macro.
	* defaults.cc (set_default_doc_cache_file): New function.
	(install_defaults): Call it.

	* help.cc (__list_functions__): Simplify

	* input.cc (get_debug_input): Don't pass arbitrary input to
	message as a format string.

2009-02-24  John W. Eaton  <jwe@octave.org>

	* help.cc, help.h (Vdoc_cache_file): New global variable.
	(Fdoc_cache_file): New function.
	* octave.cc (DOC_CACHE_FILE_OPTION): New option tag.
	(long_opts): Include doc-cache-file in the list.
	(octave_main): Handle DOC_CACHE_FILE_OPTION.

2009-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* ov-scalar.h 
	(octave_scalar::int8_scalar_value): New method.
	(octave_scalar::int16_scalar_value): New method.
	(octave_scalar::int32_scalar_value): New method.
	(octave_scalar::int64_scalar_value): New method.
	(octave_scalar::uint8_scalar_value): New method.
	(octave_scalar::uint16_scalar_value): New method.
	(octave_scalar::uint32_scalar_value): New method.
	(octave_scalar::uint64_scalar_value): New method.

	* ov-float.h 
	(octave_float_scalar::int8_scalar_value): New method.
	(octave_float_scalar::int16_scalar_value): New method.
	(octave_float_scalar::int32_scalar_value): New method.
	(octave_float_scalar::int64_scalar_value): New method.
	(octave_float_scalar::uint8_scalar_value): New method.
	(octave_float_scalar::uint16_scalar_value): New method.
	(octave_float_scalar::uint32_scalar_value): New method.
	(octave_float_scalar::uint64_scalar_value): New method.

	* OPERATORS/op-s-s.cc (scalar_to_float): Remove duplicate conversion.
	* OPERATORS/op-range.cc (range_to_float_matrix): Ditto.

2009-02-24  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-float-conv.cc: New file.
	* Makefile.in (FLOAT_OP_XSRC): Add it to the list.
	(DOUBLE_OP_XSRC): Move op-double-conv.cc here from INTTYPE_OP_XSRC.
	* ops.h (DEFFLTCONVFN, DEFSTRFLTCONVFN): New macros.

2009-02-23  John W. Eaton  <jwe@octave.org>
