@@ -645,7 +645,12 @@ get_debug_input (const std::string& prompt)
   std::string msg = buf.str ();
 
   if (! msg.empty ())
-    message (Vgud_mode ? 0 : "keyboard", "%s", msg.c_str ());
+    {
+      if (! Vgud_mode)
+	std::cerr << "keyboard: ";
+
+      std::cerr << msg << std::endl;
+    }
 
   unwind_protect::begin_frame ("get_debug_input");
 
